--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <title>UPI QR Code Generator</title>
 </head>
+
 <body>
     <div class="container">
         <div class="generator">
@@ -19,7 +21,15 @@
                 <label for="amount">Amount (optional): </label>
                 <input type="number" id="amount" min="0" step="0.01" placeholder="Enter amount">
             </div>
-            <button onclick="generateQRCode()">Generate QR Code</button>
+            <!-- Replace the existing button with the provided styled button -->
+            <button class="Btn" onclick="generateQRCode()">
+                Generate QR Code
+                <svg class="svgIcon" viewBox="0 0 576 512">
+                    <path
+                        d="M512 80c8.8 0 16 7.2 16 16v32H48V96c0-8.8 7.2-16 16-16H512zm16 144V416c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V224H528zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24h48c13.3 0 24-10.7 24-24s-10.7-24-24-24H120zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24H360c13.3 0 24-10.7 24-24s-10.7-24-24-24H248z">
+                    </path>
+                </svg>
+            </button>
         </div>
         <div class="result-area">
             <div id="qrcode"></div>
@@ -27,4 +37,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
