--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="container">
         <div class="generator">
             <h1>UPI QR Code Generator</h1>
-            <div class="input-container">
-                <label for="upiId">UPI ID: </label>
-                <input type="text" id="upiId" placeholder="Enter UPI ID" required>
+            <div class="input-container coolinput">
+                <label for="upiId" class="text">UPI ID:</label>
+                <input type="text" id="upiId" placeholder="Enter UPI ID" required class="input">
             </div>
-            <div class="input-container">
-                <label for="amount">Amount (optional): </label>
-                <input type="number" id="amount" min="0" step="0.01" placeholder="Enter amount">
+            <div class="input-container coolinput">
+                <label for="amount" class="text">Amount (optional):</label>
+                <input type="number" id="amount" min="0" step="0.01" placeholder="Enter amount" class="input">
             </div>
-            <!-- Replace the existing button with the provided styled button -->
+            <!-- Replaced the existing button with the styled button -->
             <button class="Btn" onclick="generateQRCode()">
                 Generate QR Code
                 <svg class="svgIcon" viewBox="0 0 576 512">
